update todo and note UI

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,17 @@
 <resources>
     <string name="app_name">Journaler</string>
     <string name="title_activity_main">MainActivity</string>
+    <string name="title">title</string>
+    <string name="your_note_content_goes_here">Your note content goes here.</string>
+    <string name="pick_a_date">Pick a date</string>
+    <string name="pick_time">Pick time</string>
+    <string name="hlp">H</string>
+    <string name="lorem_ipsum_sit_dolore">Lorem ipsum sit dolore</string>
+    <string name="mnu">Menu</string>
+    <string name="today">Today</string>
+    <string name="next_seven_days">Next 7 days</string>
+    <string name="todos">TODOs</string>
+    <string name="notes">Notes</string>
+    <string name="synchronize">Synchronize</string>
+    <string name="choose_a_type">Choose a type:</string>
 </resources>
